# microgridspy-expansion

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: README.md
data/demand/: customer_info.parquet  household_customers.csv
data/irradiance/: README.md  download.py  sam_solar_irradiance_hourly_2016_2025.csv
data/ramp_params/: README.md  ramp_params.json
data/ramp_params/reference/: cluster_params.csv  gbowele_monthly_cluster_summary.csv  global_cluster_profiles.csv  mixture_probabilities_type_month.csv  monthly_household_cluster_assignments.csv  monthly_household_features.csv  pivot.py  samionta_monthly_cluster_summary.csv
docs/: ROADMAP.md
docs/formulation/: model.tex  references.bib
src/microgrid_expansion/: __init__.py  config.py  run.py
src/microgrid_expansion/demand/: build_mixture_probabilities.py  build_monthly_household_clusters.py
src/microgrid_expansion/exact/: __init__.py  branch_and_simulate.py  brownfield.py  controller.py  dispatch.py  plot.py
src/microgrid_expansion/model/: __init__.py  build.py  coords.py  dispatch_constraints.py  economics.py  investment_constraints.py  variables.py
src/microgrid_expansion/post/: __init__.py  extract.py  kpis.py  report.py
src/microgrid_expansion/scenarios/: __init__.py  assemble.py  cost_paths.py  demand_paths.py  mc_sampler.py  pv_paths.py  uncertainty_space.py
src/microgrid_expansion/solve/: __init__.py  driver.py
tests/: test_benchmark.py  test_bound.py  test_brownfield.py  test_build.py  test_config.py  test_controller.py  test_dispatch_fidelity.py
(+6 files in other folders)
